<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiPerfil">
    <include
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="659dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="Nombre:\n"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="HardcodedText,TextSizeCheck"></TextView>

        <TextView
            android:id="@+id/nombreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="Apellido:\n"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="HardcodedText,TextSizeCheck">

        </TextView>

        <TextView
            android:id="@+id/apellidoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="Fecha de nacimiento:\n00/00/0000"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="HardcodedText,TextSizeCheck">

        </TextView>

        <TextView
            android:id="@+id/fechaNacimientoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_nacimiento"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="Localidad:\n"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="HardcodedText,TextSizeCheck">

        </TextView>

        <TextView
            android:id="@+id/localidadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/localidad"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="Email:\n"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="HardcodedText,TextSizeCheck">

        </TextView>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>